# Nova-Compiler

./: .gitignore  dynamic_final.mlir  gputest.mlri  pipelinecheck.mlir  scf_dump.txt  test_cpu.mlir  test_gpu_lowered_v4.mlir  test_gpu_lowered_v8.mlir  test_linalg_canonicalization.mlir  test_output.mlir  test_tosa_canonicalization.mlir
compiler_docs/: binary_code_generation.md  deep_dive_unified_flow.md  implementation_plan.md  nova_translate_internals.md  nova_translate_overview.md  task.md  unified_execution_flow.md
include/Compiler/Dialect/nova/: CMakeLists.txt  NovaCanonicalizations.td  NovaOps.td
include/Compiler/Transforms/: CMakeLists.txt  Passes.h
include/Compiler/Transforms/Affine/: DependencyAnalysisTestPass.h
include/Compiler/Translation/NovaToLinalg/: NovaToLinalg.cpp  TNovaToLinalg.cpp
include/Compiler/Translation/NovaToTosa/: NovaToTosa.cpp
include/Runtime/Executor/: ExecutionPlan.h
lib/: CMakeLists.txt
lib/API/: NovaCompilerAPI.cpp
lib/Dialect/nova/: NovaCanonicalizations.cpp  NovaOps.cpp
lib/Pipeline/: CMakeLists.txt  Gpupipeline.cpp  Pipeline.cpp
lib/Runtime/: CMakeLists.txt
lib/Runtime/Executor/: ExecutionEngine.cpp
lib/Runtime/Kernels/CUDA/: CudaKernels.cpp
lib/Runtime/Kernels/Host/: HostKernels.cpp
lib/Transforms/: CMakeLists.txt  FuseMatmulBias.cpp
lib/Transforms/Affine/: DependencyAnalysisTestPass.cpp
ltest/: binary.mlir  testgelu.mlir  unary.mlir
test/: test.mlir  test_dep_analysis.mlir  test_fusion.mlir  testexpo.mlir  testh.mlir  testmodel.mlir  testtri.mlir
test/test-ram/: datadepenceytest.mlir  dependence.mlir
tools/nova-opt/: CMakeLists.txt  nova-opt.cpp
tools/nova-translate/: nova-translate-tool  nova-translate.cpp
